<resources>
    <string name="app_name">d_bee_final</string>
    <string name="home_page">首页</string>
    <string name="q_and_a">问答</string>
    <string name="structure">体系</string>
    <string name="mine">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">author</string>
    <string name="tags">tags</string>
    <string name="title">title</string>
    <string name="nicesharedate">niceShareDate</string>
    <string name="remember_password">记住密码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="try_to_register">还未注册？点我试试</string>
    <string name="superchaptername">superChapterName</string>
    <string name="question">问答</string>
    <string name="classified_structure">体系详情</string>
    <string name="hot_key">热门搜索</string>
    <string name="separate_key_word_by_spacing">用空格隔开多个关键词</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_sharing">我的分享</string>
    <string name="my_coin">我的积分</string>
    <string name="level">等级:</string>
    <string name="rank">排名:</string>
    <string name="share">分享</string>
</resources>